--- a/index.html
+++ b/index.html
@@ -230,6 +230,28 @@
 
       </div>
       <!-- /END EDUCATION -->
+      <!-- PORTFOLIO -->
+      <div id="portfolio" class="section-block">
+
+        <h3 class="title">Sertifikat</h3>
+
+
+        <div id="works-container" class="works-container clearfix">
+
+          <!-- WORKS ITEM -->
+          <div class="works-item ui web" data-src="assets/img/sert.jpg">
+            <img src="assets/img/sert.jpg" data-no-retina alt="" />
+            <div class="works-item-inner">
+              <h4>Sertifikat</h4>
+              <h5>Junior Web Developer</h5>
+            </div>
+          </div>
+          <!-- /END WORKS ITEM -->
+
+
+        </div>
+      </div>
+      <!-- /END PORTFOLIO -->
 
       <!-- CONTACT -->
       <div id="contact" class="section-block p-b-50">
